syntax = "proto3";

package dep2p.peer;

option go_package = "github.com/dep2p/go-dep2p/pkg/proto/peer";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// AddressInfo 节点地址信息
message AddressInfo {
    // node_id 节点ID (32字节)
    bytes node_id = 1;
    
    // addrs 地址列表 (multiaddr 格式字符串)
    repeated string addrs = 2;
}

// PeerRecord 节点记录
// 用于在 DHT 中发布和查询节点信息
message PeerRecord {
    // node_id 节点ID (32字节)
    bytes node_id = 1;
    
    // realm_id 业务域ID
    string realm_id = 2;
    
    // seq 序列号 (单调递增)
    uint64 seq = 3;
    
    // addrs 地址列表
    repeated string addrs = 4;
    
    // timestamp 记录创建时间
    google.protobuf.Timestamp timestamp = 5;
    
    // ttl 记录有效期
    google.protobuf.Duration ttl = 6;
}

// SignedPeerRecord 签名的节点记录
message SignedPeerRecord {
    // record 节点记录
    PeerRecord record = 1;
    
    // signature 签名 (使用节点私钥对 record 签名)
    bytes signature = 2;
    
    // public_key 签名者公钥 (可选，用于验证)
    bytes public_key = 3;
}

// PeerState 节点状态
enum PeerState {
    PEER_STATE_UNSPECIFIED = 0;
    PEER_STATE_ONLINE = 1;
    PEER_STATE_DEGRADED = 2;
    PEER_STATE_OFFLINE = 3;
}

// PeerInfo 节点详细信息
message PeerInfo {
    // node_id 节点ID
    bytes node_id = 1;
    
    // addrs 地址列表
    repeated string addrs = 2;
    
    // state 节点状态
    PeerState state = 3;
    
    // protocols 支持的协议列表
    repeated string protocols = 4;
    
    // agent_version 客户端版本
    string agent_version = 5;
    
    // latency_ms 延迟 (毫秒)
    int64 latency_ms = 6;
    
    // connected_since 连接建立时间
    google.protobuf.Timestamp connected_since = 7;
}

